Added .gitignore and cleaned up

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 # Godot 4+ specific ignores
 .godot/
-/android/
+
+# Godot 3 specific ignores
+.import/
+
+# Mono/C# specific ignores
+.mono/
+.vscode/
+*.sln
+*.csproj
+
+# Export settings (optional, keeps secrets private)
+export_presets.cfg
+export_credentials.cfg
